Merged revision 1345357 from tomcat/trunk: For https://issues.apache.org/bugzilla/show_bug.cgi?id=53257 Review of r1344902: restore passing DirContextURLStreamHandler instance into the new URL.
Note that we use "new DirContextURLStreamHandler(DirContext)" and
thus the handler will not need to call DirContextURLStreamHandler#get() to retrieve the context.

git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc7.0.x/trunk@1345359 13f79535-47bb-0310-9956-ffa450edef68